--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
-<html lang="en-US">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Tarea Sem 7 </title>
-</head>
-<body>
-<script>
-    var numero = parseInt(prompt("Ingrese un numero por favor: "));
+<html lang="en">
+  <head>
+    <title>Tarea Sem 7</title>
+  </head>
+  <body>
 
-for (let i = 0; i < numero; i++) {
-  console.log('Hola');
-}
-    </script>
-</body>
+  <script src="./script.js"></script>
+  </body>
 </html>
